--- a/9-buscador-peliculas/styles.css
+++ b/9-buscador-peliculas/styles.css
@@ -16,13 +16,16 @@ body {
     box-sizing: border-box;
     margin-bottom: 30px;
     display: flex;
-    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
+
 .header h1 {
     margin: 0;
-    padding: 0 20px;
+    padding: 10px 20px;
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
 }
@@ -94,7 +97,7 @@ button[type="submit"]:hover {
 .container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start; 
+    justify-content: center; 
     gap: 20px;
 }
 
